added more styling to A element

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p {
 img {
     border: dotted blue;
 }
-/* Makes link appear at NOT underlined */
+/* Makes link appear at NOT underlined, added bg color, made font bold */
 a {
     text-decoration: none;
     background-color: rgb(98, 98, 233);
